@@ -24,6 +24,7 @@
 -- fixed inspector reinit
 -- fixed byte_extract and byte_jump endianisms
 -- suspend active when purging caches
+-- temporary support for legacy paf_max
 
 127
 -- REG_TEST out logging tcp options for rebuilt packets to match snort bug
